--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include requirements.txt
-include README.md
+include README.rst
+include HISTORY.rst
 include MANIFEST.in
 include LICENSE
 recursive-include firstclass/templates *
